objects/Webservice_Callout__c.object
<CustomObject>
    <description>Used to log webservice callouts for custom functionality. Included:
- LexisNexis Account updates for Specialty Finance</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Webservice Callouts</relationshipLabel>
        <relationshipName>Webservice_Callouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Submitted__c</fullName>
        <label>Date/Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture Phone Number record that triggered Neustar Phone Attr callout</description>
        <label>Phone Number</label>
        <referenceTo>Phone_Number__c</referenceTo>
        <relationshipLabel>Webservice Callouts</relationshipLabel>
        <relationshipName>Webservice_Callouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Query_Index__c</fullName>
        <inlineHelpText>Neustar - Order of query submitted when multiple callouts are needed for MPIC</inlineHelpText>
        <label>Query Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Webservice Callout</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Date_Time_Submitted__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Salesforce_Team</group>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Callout Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webservice Callouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>